changed method for converting string to path